--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="\favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Smile Friends</title>
+  <title>Smilling Friends</title>
 </head>
 
 <body>
